# RTS

./: .gitignore  README.md
labs/: CMakeLists.txt
labs/lab1/: CMakeLists.txt  main.c
labs/lab1/src/: CMakeLists.txt
labs/lab2/src/: CMakeLists.txt  main.c
labs/lab3/: CMakeLists.txt  main.c
labs/lab4/: CMakeLists.txt
labs/lab5/: CMakeLists.txt
labs/reports/: T3_Matveev_8362.c  T4_Matveev_8362.c  T5_Matveev_8362.c  T5_Матвеев_8362.doc
refs/: A1_Larionova_8362.docx  A1_Matveev_8362.docx  A2_Larionova_8362.docx  A6_Матвеев_8362.docx
